Fix layout and scrollbar on Chrome

--- a/frontend/still/src/App.css
+++ b/frontend/still/src/App.css
@@ -27,11 +27,15 @@ body {
 .content {
   flex-grow: 1;
   width: 100%;
-  max-width: 60rem;
-  margin-left: auto;
-  margin-right: auto;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-top: 1rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.inner-content {
+  width: 100%;
+  max-width: 60rem;
+  margin-left: auto;
+  margin-right: auto;
 }
